--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -13,7 +13,7 @@
     <div class="col-sm-4">
       <div class="card">
         <div class="card-img-top">
-          <img class="img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
+          <img class="img-thumbnail" src="{{photoUrl}}" alt="{{user.knownAs}}">
         </div>
         <div class="card-body">
           <div>
@@ -62,7 +62,8 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <p>Photo edit will go here</p>
+            <app-photo-editor [photos]="user.photos"
+              (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
           </tab>
         </tabset>      
       </div>
