--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -6,7 +6,7 @@
     <div class="col-sm-4">
       <div class="card">
         <div class="card-img-top">
-          <img class="img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
+          <img class="img-thumbnail" src="{{user.photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}">
         </div>
         <div class="card-body">
           <div>
