--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -13,7 +13,7 @@
     <div class="col-sm-4">
       <div class="card">
         <div class="card-img-top">
-          <img class="img-thumbnail" src="{{photoUrl}}" alt="{{user.knownAs}}">
+          <img class="img-thumbnail" src="{{photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}">
         </div>
         <div class="card-body">
           <div>
