End of section 15

--- a/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -40,7 +40,7 @@
             [(ngModel)]="userParams.orderBy" 
             (click)="loadUsers()" 
             btnRadio="created">
-            Newest Members
+            Newest Member
           </button>
         </div>
       </div>
